	 interface on reset (Stuart).
20071025 man/fuse.1: updates for Pentagon 512/1024 emulation (Stuart).
20071025 fuse.c,widget/filesel.c: set error handling mode on Win32 (thanks,
	 Jon Needle), and use chdir() for drive selection on Win32 (Stuart).
20071026 ChangeLog,compat/{amiga/paths.c,unix/paths.c,win32/paths.c},
         configure.in: fix typos (Stuart).
20071027 menu.c,menu_data.dat,settings.pl: allow the +D ROM to be customised
         (Fred).
20071027 disk/disk.c: add #include <string.h> for various prototypes (Fred).
20071027 menu.c,menu_data.dat,settings.pl: rearrange ROMs (Stuart).
20071028 keyboard.c,ula.c: fix up ULA handling for 128K / +3 machines. Also
	 move a variable from keyboard.c to ula.c where it makes a lot more
	 sense for it to be. (Fixes bug #1821604).
20071028 z80/z80.pl: LD[DI]R were applying contention when they shouldn't on
	 the +3 (fixes bug #1821389).
20071104 ui/options.dat: fix letter case for "Issue 2 keyboard" option (Stuart).
20071105 machines/{machines.h,pentagon.c,pentagon1024.c,scorpion.c,spec128.c,
	 spec16.c,spec48.[ch],spec_se.c,specplus2.c,specplus2a.c,
	 specplus3.[ch],specplus3e.c,tc2048.c,tc2068.c,ts2068.c},spectrum.h,
	 ula.c: high ports can be contended on the 128K/+2. Also, rename
	 a member to more accurately describe what it does. (fixes bug
	 #1825241).
20071106 z80/{z80.pl,z80_ops.c}: fix smallmem compilation (fixes bug #1726014)
	 (Stuart).
20071109 Makefile.am,configure.in,compat/Makefile.am: directly include compat
         files in fuse_SOURCES removing use of libcompat.a as Mac OS X can't
         do empty ar archives (patch #1827454) (Fred).
20071109 if1.c: fix typos in comments (Stuart).
20071109 menu.c,menu.h,ui/{gtk/{binary.c,fileselector.c,gtkui.c,roms.c},
	 ui.h,win32/win32ui.c},widget/{filesel.c,menu.c}: rename
	 menu_get_{open,save}_filename() to ui_get_{open,save}_filename() and
	 move widget_get_filename() to filesel.c (Stuart).