@@ -374,115 +374,10 @@ ui_confirm_joystick( libspectrum_joystick libspectrum_type, int inputs )
 }
 
 int
-ui_tape_write( void )
-{
-  char *filename;
-
-  fuse_emulation_pause();
-
-  filename = ui_get_save_filename( "Fuse - Write Tape" );
-  if( !filename ) { fuse_emulation_unpause(); return 1; }
-
-  tape_write( filename );
-
-  free( filename );
-
-  fuse_emulation_unpause();
-
-  return 0;
-}
-
-int
 ui_tape_browser_update( ui_tape_browser_update_type change,
 			libspectrum_tape_block *block )
 {
   STUB;
-  return 0;
-}
-
-#ifdef HAVE_765_H
-int
-ui_plus3_disk_write( specplus3_drive_number which )
-{
-  char drive, *filename, title[80];
-
-  drive = which == SPECPLUS3_DRIVE_A ? 'A' : 'B';
-
-  if( !specplus3_disk_present( which ) ) {
-    ui_error( UI_ERROR_WARNING, "No disk present in drive %c:", drive );
-    return 0;
-  }
-
-  fuse_emulation_pause();
-
-  snprintf( title, 80, "Fuse - Write +3 Disk %c:", drive );
-
-  filename = ui_get_save_filename( title );
-  if( !filename ) { fuse_emulation_unpause(); return 1; }
-
-  specplus3_disk_write( which, filename );
-
-  free( filename );
-
-  fuse_emulation_unpause();
-
-  return 0;
-}
-#endif			/* #ifdef HAVE_765_H */
-
-int
-ui_beta_disk_write( beta_drive_number which )
-{
-  char drive, *filename, title[80];
-
-  switch( which ) {
-    case BETA_DRIVE_A: drive = 'A'; break;
-    case BETA_DRIVE_B: drive = 'B'; break;
-    case BETA_DRIVE_C: drive = 'C'; break;
-    case BETA_DRIVE_D: drive = 'D'; break;
-    default: drive = '?'; break;
-  }
-
-  fuse_emulation_pause();
-
-  snprintf( title, 80, "Fuse - Write Beta Disk Interface Disk %c:", drive );
-
-  filename = ui_get_save_filename( title );
-  if( !filename ) { fuse_emulation_unpause(); return 1; }
-
-  beta_disk_write( which, filename );
-
-  free( filename );
-
-  fuse_emulation_unpause();
-
-  return 0;
-}
-
-int
-ui_plusd_disk_write( plusd_drive_number which )
-{
-  char drive, *filename, title[80];
-
-  switch( which ) {
-    case PLUSD_DRIVE_1: drive = '1'; break;
-    case PLUSD_DRIVE_2: drive = '2'; break;
-    default: drive = '?'; break;
-  }
-
-  fuse_emulation_pause();
-
-  snprintf( title, 80, "Fuse - Write +D Disk %c", drive );
-
-  filename = ui_get_save_filename( title );
-  if( !filename ) { fuse_emulation_unpause(); return 1; }
-
-  plusd_disk_write( which, filename );
-
-  free( filename );
-
-  fuse_emulation_unpause();
-
   return 0;
 }
 
